Limit the maximum paint fragment count further.

Hopefully fixes a flaky test that tends to time out.

Bug: 763809
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I57ad04a4bfd26cb5e8e59786bc83e72052e60099
Reviewed-on: https://chromium-review.googlesource.com/716137
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Morten Stenshorne <mstensho@opera.com>
Cr-Commit-Position: refs/heads/master@{#508389}
Former-commit-id: 8eaaa8542b5e19e6293767a4f4e537e38cf80768